; ModuleID = '/home/carl/AnghaBench/reactos/drivers/network/tcpip/datalink/extr_lan.c_TcpipLanGetDwordOid.c'
source_filename = "/home/carl/AnghaBench/reactos/drivers/network/tcpip/datalink/extr_lan.c_TcpipLanGetDwordOid.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

%struct.TYPE_3__ = type { i64 }

@NdisRequestQueryInformation = common dso_local global i32 0, align 4
@NdisHardwareStatusReady = common dso_local global i32 0, align 4
@STATUS_SUCCESS = common dso_local global i32 0, align 4
@NdisMediaStateConnected = common dso_local global i32 0, align 4
@STATUS_INVALID_PARAMETER = common dso_local global i32 0, align 4

; Function Attrs: noinline nounwind optnone uwtable
define dso_local i32 @TcpipLanGetDwordOid(%struct.TYPE_3__* %0, i32 %1, i32* %2) #0 {
  %4 = alloca i32, align 4
  %5 = alloca %struct.TYPE_3__*, align 8
  %6 = alloca i32, align 4
  %7 = alloca i32*, align 8
  store %struct.TYPE_3__* %0, %struct.TYPE_3__** %5, align 8
  store i32 %1, i32* %6, align 4
  store i32* %2, i32** %7, align 8
  %8 = load %struct.TYPE_3__*, %struct.TYPE_3__** %5, align 8
  %9 = getelementptr inbounds %struct.TYPE_3__, %struct.TYPE_3__* %8, i32 0, i32 0
  %10 = load i64, i64* %9, align 8
  %11 = icmp ne i64 %10, 0
  br i1 %11, label %12, label %21

12:                                               ; preds = %3
  %13 = load %struct.TYPE_3__*, %struct.TYPE_3__** %5, align 8
  %14 = getelementptr inbounds %struct.TYPE_3__, %struct.TYPE_3__* %13, i32 0, i32 0
  %15 = load i64, i64* %14, align 8
  %16 = trunc i64 %15 to i32
  %17 = load i32, i32* @NdisRequestQueryInformation, align 4
  %18 = load i32, i32* %6, align 4
  %19 = load i32*, i32** %7, align 8
  %20 = call i32 @NDISCall(i32 %16, i32 %17, i32 %18, i32* %19, i32 4)
  store i32 %20, i32* %4, align 4
  br label %33

21:                                               ; preds = %3
  %22 = load i32, i32* %6, align 4
  switch i32 %22, label %31 [
    i32 129, label %23
    i32 128, label %27
  ]

23:                                               ; preds = %21
  %24 = load i32, i32* @NdisHardwareStatusReady, align 4
  %25 = load i32*, i32** %7, align 8
  store i32 %24, i32* %25, align 4
  %26 = load i32, i32* @STATUS_SUCCESS, align 4
  store i32 %26, i32* %4, align 4
  br label %33

27:                                               ; preds = %21
  %28 = load i32, i32* @NdisMediaStateConnected, align 4
  %29 = load i32*, i32** %7, align 8
  store i32 %28, i32* %29, align 4
  %30 = load i32, i32* @STATUS_SUCCESS, align 4
  store i32 %30, i32* %4, align 4
  br label %33

31:                                               ; preds = %21
  %32 = load i32, i32* @STATUS_INVALID_PARAMETER, align 4
  store i32 %32, i32* %4, align 4
  br label %33

33:                                               ; preds = %31, %27, %23, %12
  %34 = load i32, i32* %4, align 4
  ret i32 %34
}

declare dso_local i32 @NDISCall(i32, i32, i32, i32*, i32) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
